feat: Updated authors of 4th an10 homework

--- a/latex/an10/ha04.tex
+++ b/latex/an10/ha04.tex
@@ -20,7 +20,7 @@
 \usepackage{xcolor}
 \definecolor{light-gray}{gray}{.9}
 
-\author{Karsten Lehmann}
+\author{Lukas Kamratzki \\ Karsten Lehmann \\ Sofia Hettwer}
 \date{21.11.2020}
 \title{Hausaufgabe 04 Analysis - Grundlegende Konzepte}
 
