--- a/latex/la10/la10.tex
+++ b/latex/la10/la10.tex
@@ -855,4 +855,24 @@ Welche Bedeutung hat $0$ in jedem der obigen Fälle?
   \end{align*}
 \end{enumerate}
 
+\textbf{Bemerkung}: $\forall i \in I \colon U_i \subseteq V \Rightarrow \underset{i \in I}{\cap} U_i$ ist ein Untervektorraum.
+
+Wenn $(U, +)$ abelsche Untergruppen sind, dann ist $u,v \in \underset{i \in I}{\cap} U_i \Rightarrow u + v \in U_i$.
+Außerdem, wenn $\lambda \in \mathbb{K}, u \in \underset{i \in I}{\cap} U_i$, dann $\lambda \cdot u \in \underset{i \in I}{\cap} U_i$
+für alle $i \in I$
+
+\[
+  \text{span} \{ 0 \} = \{ 0 \}
+\]
+
+\[
+  \text{span} \left\{\begin{pmatrix}1\\0\\0\end{pmatrix}\right\} =
+  \left\{ \begin{pmatrix}\lambda\\0\\0\end{pmatrix} \middle| \lambda \in \mathbb{R} \right\}
+\]
+
+\[
+  \text{span} \left\{\begin{pmatrix}1\\2\\0\end{pmatrix},\begin{pmatrix}1\\3\\0\end{pmatrix}\right\} =
+  \left\{ \begin{pmatrix}x\\y\\0\end{pmatrix} \middle| x, y \in \mathbb{R} \right\}
+\]
+
 \end{document}
