--- a/courses/an10/uebung.tex
+++ b/courses/an10/uebung.tex
@@ -53,7 +53,7 @@
   \node[red] at (6,-.3) {$P = \mathbb{R}_{>0}$};
 \end{tikzpicture}
 
-o$\leq$ ist eine reflexive Relation
+$\leq$ ist eine reflexive Relation
 \[
   \forall a \in \mathbb{R} \colon a \leq a
 \]
