--- a/courses/an10/koerperaxiome.tex
+++ b/courses/an10/koerperaxiome.tex
@@ -17,7 +17,7 @@
 \newtheorem*{definition}{Definition}
 \newtheorem*{satz}{Satz}
 
-\renewcommand{\thesubsection}{\arabic    {subsection}}
+\renewcommand{\thesubsection}{\arabic{subsection}}
 
 \author{Karsten Lehmann}
 \date{WiSe 2020}
@@ -255,5 +255,21 @@ $a \cdot b = 1 \land a \cdot c = 1$.
 
 Somit ist das multiplikative Inverse eindeutig bestimmt.
 
+\subsection{Existenz der Differenz von b und a}
+
+Für jedes $a \in \mathbb{R}$ und jedes $b \in \mathbb{R}$ gibt es ein $x \in \mathbb{R}$
+mit $a + x = b$.
+
+Angenommen $x$ wäre gleich $b - a$, dann gilt
+
+\begin{align*}
+  a + x &= a + x \\
+  a + x \overset{\text{Annahme}}&= a + (b - a) \\
+  a + x \overset{\hyperref[a4](A4)}&= a + ((-a) + b) \\
+  a + x \overset{\hyperref[a1](A1)}&= (a + (-a)) + b \\
+  a + x \overset{\hyperref[a3](A3)}&= 0 + b \\
+  a + x \overset{\hyperref[a4](A4)}&= b + 0 \\
+  a + x \overset{\hyperref[a2](A2)}&= b
+\end{align*}
 
 \end{document}
