feat: Existenz Quotinet b und a
* courses/an10/koerperaxiome.tex:

--- a/courses/an10/koerperaxiome.tex
+++ b/courses/an10/koerperaxiome.tex
@@ -272,4 +272,19 @@ Angenommen $x$ wäre gleich $b - a$, dann gilt
   a + x \overset{\hyperref[a2](A2)}&= b
 \end{align*}
 
+\subsection{Existenz des Quotienten von b und a}
+Für jedes $a \in \mathbb{R}$ und jedes $b \in \mathbb{R}$ gibt es ein $x \in \mathbb{R}$
+mit $a \cdot x = b$
+
+Angenommen $x$ wäre gleich $\frac{b}{a}$, dann gilt
+
+\begin{align*}
+  a \cdot x &= a \cdot x \\
+  a \cdot x \overset{\text{Annahme}}&= a \cdot \frac{b}{a} \\ 
+  a \cdot x \overset{\hyperref[a8]{(A8)}}&= (a \cdot a^{-1}) \cdot b \\ 
+  a \cdot x \overset{\hyperref[a7]{(A7)}}&= 1 \cdot b \\
+  a \cdot x \overset{\hyperref[a6]{(A6)}}&= b
+\end{align*}
+
+
 \end{document}
