--- a/courses/an10/koerperaxiome.tex
+++ b/courses/an10/koerperaxiome.tex
@@ -265,11 +265,11 @@ Angenommen $x$ wäre gleich $b - a$, dann gilt
 \begin{align*}
   a + x &= a + x \\
   a + x \overset{\text{Annahme}}&= a + (b - a) \\
-  a + x \overset{\hyperref[a4](A4)}&= a + ((-a) + b) \\
-  a + x \overset{\hyperref[a1](A1)}&= (a + (-a)) + b \\
-  a + x \overset{\hyperref[a3](A3)}&= 0 + b \\
-  a + x \overset{\hyperref[a4](A4)}&= b + 0 \\
-  a + x \overset{\hyperref[a2](A2)}&= b
+  a + x \overset{\hyperref[a4]{(A4)}}&= a + ((-a) + b) \\
+  a + x \overset{\hyperref[a1]{(A1)}}&= (a + (-a)) + b \\
+  a + x \overset{\hyperref[a3]{(A3)}}&= 0 + b \\
+  a + x \overset{\hyperref[a4]{(A4)}}&= b + 0 \\
+  a + x \overset{\hyperref[a2]{(A2)}}&= b
 \end{align*}
 
 \subsection{Existenz des Quotienten von b und a}
