--- a/courses/an10/koerperaxiome.tex
+++ b/courses/an10/koerperaxiome.tex
@@ -286,5 +286,15 @@ Angenommen $x$ wäre gleich $\frac{b}{a}$, dann gilt
   a \cdot x \overset{\hyperref[a6]{(A6)}}&= b
 \end{align*}
 
+\subsection{Das additive Inverse des additiven Inversen eines Elementes ist das Element selbst}
+
+\begin{align*}
+  (-a) + a \overset{\hyperref[a4]{(A4)}}&= a + (-a) \\
+  \overset{\hyperref[a2]{(A2)}}&= 0
+\end{align*}
+
+Damit ist $a$ ein additives inverses Element von $(-a)$.
+Somit ist $(-(-a)) = a$
+
 
 \end{document}
