doc: 1. binom. formula

--- a/courses/an10/koerperaxiome.tex
+++ b/courses/an10/koerperaxiome.tex
@@ -405,5 +405,18 @@ Somit ist $-(a^{-1})$ ein multiplikatives Inverses von $(-a)$. Aus der
 \hyperref[eindeutigkeit_mul_inv]{Eindeutigkeit des multiplikativen Inversen}
 folgt, dass $(-a)^{-1} = -(a^{-1})$.
 
+\subsection{1. Binomische Formel}
+
+Es sei zu beweisen, dass $(a + b)^2 = a^2 + 2ab + b^2$.
+
+\begin{align*}
+  (a + b)^2 \overset{a^2 = a \cdot a}&= (a + b) \cdot (a + b) \\
+            \overset{\hyperref[a9]{(A(9)}}&= (a + b) \cdot a + (a + b) \cdot b \\
+            \overset{\hyperref[a8]{(A8)}}&= a \cdot (a + b) + b \cdot (a + b) \\
+            \overset{\hyperref[a9]{(A9)}}&= a \cdot a + a \cdot b + b \cdot a + b \cdot b \\
+            \overset{\hyperref[a8]{(A8)}}&= a \cdot a + a \cdot b + a \cdot b + b \cdot b \\
+            \overset{a \cdot a = a^2}&= a^2 + a \cdot b + a \cdot b + b^2 \\
+            \overset{a + a = 2a}&= a^2 + 2ab + b^2
+\end{align*}
 
 \end{document}
